:art: refactor: Event 및 UserEvent 중복 필드 제거, 연관 관계 및 쿼리 업데이트(#125)
- Event
  1. date 컬럼 null 제약조건 변경
  2. memo 컬럼 삭제

- UserEvent
  1. name, category 컬럼 삭제
  2. 데이터 무결성 유지를 위한 유저 커스텀 필드 customStartDate, customEndDate 추가 (기본 값은 Event의 startDate, endDate를 따른다.)